--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.11",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "axios": "^1.6.8",
+    "graphql": "^16.8.1",
     "next": "14.1.4",
     "react": "^18",
     "react-device-detect": "^2.2.3",
