--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "next": "14.1.4",
     "react": "^18",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.25",
