--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.9.11",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.16",
     "axios": "^1.6.8",
     "graphql": "^16.8.1",
