--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "recoil": "^0.7.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
