--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.11",
+    "@babel/runtime": "^7.24.6",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
@@ -20,12 +21,14 @@
     "ag-grid-community": "^31.3.2",
     "ag-grid-react": "^31.3.2",
     "axios": "^1.6.8",
+    "easymde": "^2.18.0",
     "graphql": "^16.8.1",
     "next": "14.1.4",
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-simplemde-editor": "^5.2.0",
     "recoil": "^0.7.7",
     "yup": "^1.4.0"
   },
