--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.11",
-    "@babel/runtime": "^7.24.6",
+    "@apollo/client": "^3.10.4",
+    "@babel/runtime": "^7.24.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
@@ -20,10 +20,12 @@
     "@mui/material": "^5.15.16",
     "ag-grid-community": "^31.3.2",
     "ag-grid-react": "^31.3.2",
+    "apollo-upload-client": "^18.0.1",
     "axios": "^1.6.8",
     "easymde": "^2.18.0",
     "graphql": "^16.8.1",
-    "next": "14.1.4",
+    "graphql-upload": "^16.0.2",
+    "next": "^14.2.3",
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
@@ -43,6 +45,9 @@
     "@storybook/nextjs": "^8.0.5",
     "@storybook/react": "^8.0.5",
     "@storybook/test": "^8.0.5",
+    "@types/apollo-upload-client": "^18.0.0",
+    "@types/graphql": "^14.5.0",
+    "@types/graphql-upload": "^16.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -56,7 +61,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.0.0",
     "postcss": "^8",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "storybook": "^8.0.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
