--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,7 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "maxNodeModuleJsDepth": 10,
+  "module": "node16"
 }
