--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-modal": "^3.16.1",
+    "react-scripts": "^5.0.1",
     "react-simplemde-editor": "^5.2.0",
     "recoil": "^0.7.7",
     "yup": "^1.4.0"
@@ -49,8 +51,9 @@
     "@types/graphql": "^14.5.0",
     "@types/graphql-upload": "^16.0.7",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^9.1.0",
     "eslint-config-next": "14.1.4",
